--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
           <li><a href="#home"><i class="fas fa-home"></i> Home</a></li>
           <li><a href="#booking"><i class="fa-solid fa-hotel"></i> Book Room</a></li>
           <li><a href="#contact"><i class="fa-solid fa-square-phone"></i> Contact</a></li>
-          <li><a href="#"><i class="fas fa-cogs"></i> Settings</a></li>
-          <li><a href="#"><i class="fas fa-question-circle"></i> Help</a></li>
+          <li><a href="https://support.google.com/accounts/answer/3118621?hl=en"><i class="fas fa-cogs"></i> Settings</a></li>
+          <li><a href="https://support.google.com/"><i class="fas fa-question-circle"></i> Help</a></li>
         </ul>
       </div>
 
